Add zellij theme & fix stuff

--- a/.config/config_template/leftwm/themes/left_theme/polybar/theme.ini
+++ b/.config/config_template/leftwm/themes/left_theme/polybar/theme.ini
@@ -10,7 +10,7 @@ red    = {{ red }}
 green  = {{ green }}
 yellow = {{ yellow }}
 blue   = {{ blue }}
-purple = {{ purple }}
+magenta = {{ magenta }}
 cyan   = {{ cyan }}
 pink   = {{ pink }}
 orange = {{ orange }}
