--- a/.config/leftwm/themes/left_theme/polybar/theme.ini
+++ b/.config/leftwm/themes/left_theme/polybar/theme.ini
@@ -1,16 +1,16 @@
 [theme]
-background = #0a0e14
-background-alt = #161f2d
+background = #21222C
+background-alt = #282A36
 
-foreground = #b3b1ad
+foreground = #f8f8f2
 
-white  = #c7c7c7
-black  = #01060e
-red    = #ea6c73
-green  = #91b362
-yellow = #f9af4f
-blue   = #53bdfa
-purple = #fae994
-cyan   = #90e1c6
-pink   = #ffee99
-orange = #ffb454
+white  = #FFFFFF
+black  = #15121C
+red    = #f07178
+green  = #c3e88d
+yellow = #ffcb6b
+blue   = #82aaff
+magenta = #c792ea
+cyan   = #89ddff
+pink   = #ffa8c5
+orange = #dd864a
