--- a/.config/themes/ayu_dark.yaml
+++ b/.config/themes/ayu_dark.yaml
@@ -13,7 +13,7 @@ red:     '#ea6c73'
 green: &accent2 '#91b362'
 yellow:  '#f9af4f'
 blue: &accent1 '#53bdfa'
-purple:  '#fae994'
+magenta:  '#fae994'
 cyan:    '#90e1c6'
 pink:    '#ffee99'
 orange:  '#ffb454'
