--- a/.config/themes/one_dark.yaml
+++ b/.config/themes/one_dark.yaml
@@ -9,7 +9,7 @@ red: "#f07178"
 green: "#c3e88d"
 yellow: "#ffcb6b"
 blue: "#82aaff"
-purple: "#c792ea"
+magenta: "#c792ea"
 cyan: "#89ddff"
 pink: "#ffa8c5"
 orange: "#dd864a"
