--- a/.config/leftwm/themes/left_theme/theme.toml
+++ b/.config/leftwm/themes/left_theme/theme.toml
@@ -1,5 +1,5 @@
 border_width = 2
 margin = 10
-default_border_color = "#161f2d"
-focused_border_color = "#53bdfa"
-floating_border_color = "#91b362"
+default_border_color = "#282A36"
+focused_border_color = "#82aaff"
+floating_border_color = "#c3e88d"
