--- a/.config/leftwm/themes/left_theme/polybar/modules.ini
+++ b/.config/leftwm/themes/left_theme/polybar/modules.ini
@@ -54,10 +54,10 @@ exec = ~/scripts/performance.sh
 type = internal/date
 
 format-prefix = "  "
-format-prefix-foreground = ${theme.purple}
+format-prefix-foreground = ${theme.magenta}
 format-padding = 2
 
-date = %d-%m-%Y %H:%M:%S
+date = %H:%M:%S %d-%m-%Y
 interval = 1
 
 [module/pulseaudio]
