--- a/.config/leftwm/themes/left_theme/polybar/theme.ini
+++ b/.config/leftwm/themes/left_theme/polybar/theme.ini
@@ -1,16 +1,16 @@
 [theme]
-background = #21222C
-background-alt = #282A36
+background = #2e3440
+background-alt = #3b4252
 
-foreground = #f8f8f2
+foreground = #eceff4
 
-white  = #FFFFFF
-black  = #15121C
-red    = #f07178
-green  = #c3e88d
-yellow = #ffcb6b
-blue   = #82aaff
-magenta = #c792ea
-cyan   = #89ddff
-pink   = #ffa8c5
-orange = #dd864a
+white  = #eceff4
+black  = #2e3440
+red    = #bf616a
+green  = #a3be8c
+yellow = #ebcb8b
+blue   = #88c0d0
+magenta = #b48ead
+cyan   = #8fbcbb
+pink   = #b48ead
+orange = #d08770
