--- a/.config/leftwm/themes/left_theme/theme.toml
+++ b/.config/leftwm/themes/left_theme/theme.toml
@@ -1,5 +1,5 @@
 border_width = 2
 margin = 10
-default_border_color = "#282A36"
-focused_border_color = "#82aaff"
-floating_border_color = "#c3e88d"
+default_border_color = "#3b4252"
+focused_border_color = "#88c0d0"
+floating_border_color = "#81a1c1"
