--- a/.config/leftwm/themes/left_theme/theme.toml
+++ b/.config/leftwm/themes/left_theme/theme.toml
@@ -2,4 +2,4 @@ border_width = 2
 margin = 10
 default_border_color = "#3b4252"
 focused_border_color = "#88c0d0"
-floating_border_color = "#81a1c1"
+floating_border_color = "#8fbcbb"
