--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -4,7 +4,7 @@ shadow = true;
 
 shadow-radius = 12;
 
-shadow-opacity = 0.90;
+shadow-opacity = 0.45;
 
 shadow-offset-x = -6;
 shadow-offset-y = -6;
@@ -16,12 +16,12 @@ shadow-exclude = [
   "class_g ?= 'Notify-osd'",
   "class_g = 'Cairo-clock'",
   "class_g = 'i3-frame'",
-#  "_GTK_FRAME_EXTENTS@:c"
+  "class_g = 'Rofi'",
 ];
 
 # Rounded corners
-corner-radius = 0;
-detect-rounded-corners = false;
+corner-radius = 6;
+detect-rounded-corners = true;
 
 rounded-corners-exclude = [
   "name = 'Notification'",
@@ -67,7 +67,7 @@ wintypes:
 {
   main = { fade = true; blur = true };
   tooltip = { fade = true; shadow = true; opacity = 0.95; focus = true; full-shadow = false; };
-  dock = { shadow = false; opacity: 0.87; }
+  dock = { shadow = true; }
   dnd = { shadow = false; }
   popup_menu = { opacity = 0.95; focus = false }
   dropdown_menu = { opacity = 0.95; }
