--- a/.config/leftwm/themes/left_theme/polybar/modules.ini
+++ b/.config/leftwm/themes/left_theme/polybar/modules.ini
@@ -57,7 +57,7 @@ format-prefix = "  "
 format-prefix-foreground = ${theme.magenta}
 format-padding = 2
 
-date = %H:%M:%S %d-%m-%Y
+date = %Y-%m-%d %H:%M:%S 
 interval = 1
 
 [module/pulseaudio]
