Update polybar theme

--- a/.config/config_template/polybar/theme.ini
+++ b/.config/config_template/polybar/theme.ini
@@ -4,6 +4,9 @@ background-alt = {{ bg1 }}
 
 foreground = {{ fg0 }}
 
+primary = {{ primary0 }}
+secondary = {{ secondary0 }}
+
 white  = {{ white }}
 black  = {{ black }}
 red    = {{ red }}
