--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -2,44 +2,33 @@
 margin-top = 0
 margin-bottom = 0
 
-include-file = $SCRIPTPATH/polybar/modules.ini
-include-file = $SCRIPTPATH/polybar/theme.ini
+include-file = modules.ini
+include-file = theme.ini
 
-[bar/mainbar0]
-inherit = bar/barbase
-modules-left = workspace0 title
-[module/workspace0]
-type = custom/script
-exec = leftwm-state -w 0 -t $SCRIPTPATH/template.liquid
-tail = true
-format-font = 1
 
-[bar/barbase]
-width = ${env:width}
-offset-x = ${env:offsetx}
-monitor = ${env:monitor}
-height = 26
+[bar/mainbar]
+width = 100%
+height = 22pt
+
 fixed-center = true
+
 background = ${theme.background}
 foreground = ${theme.foreground}
-line-size = 3
-line-color = #f00
 
-border-top-size = 8
-border-top-color = #00000000
-border-left-size = 8
-border-left-color = #00000000
-border-right-size = 8
-border-right-color = #00000000
+line-size = 2pt
 
-padding-left = 5
-padding-right = 5
+border-size = 3pt
+border-color = #00000000
+
+padding = 2
+module-margin = 2
 
 font-0 = Iosevka Nerd Font:size=11;2
 font-1 = Iosevka Nerd Font:size=10;2
 
+modules-left = xworkspaces xwindow
 modules-center =
-modules-right = mpd networkspeed weather cpu memory pulseaudio datetime
+modules-right = mpd networkspeed weather cpu memory audio datetime
 
 tray-position = right
 tray-padding = 6
@@ -49,14 +38,4 @@ cursor-scroll = ns-resize
 
 [settings]
 screenchange-reload = true
-;compositing-background = xor
-;compositing-background = screen
-;compositing-foreground = source
-;compositing-border = over
-;pseudo-transparency = false
-compositing-background = source
-compositing-foreground = over
-compositing-overline = over
-compositing-underline = over
-compositing-border = over
-
+pseudo-transparency = true
