--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -1,4 +1,23 @@
-[module/title]
+[module/xworkspaces]
+type = internal/xworkspaces
+
+label-active = %name%
+label-active-background = ${theme.background-alt}
+label-active-underline= ${theme.primary}
+label-active-padding = 1
+
+label-occupied = %name%
+label-occupied-background = ${theme.background-alt}
+label-occupied-padding = 1
+
+label-empty = %name%
+label-empty-padding = 1
+
+label-urgent = %name%
+label-urgent-background = ${theme.primary}
+label-urgent-padding = 1
+
+[module/xwindow]
 type = internal/xwindow
 
 format = <label>
@@ -13,8 +32,6 @@ type = internal/cpu
 interval = 0.2
 format-prefix = "龍  "
 format-prefix-foreground = ${theme.green}
-format-padding = 2
-format-background = ${theme.background-alt}
 label = %percentage:2%%
 
 [module/memory]
@@ -22,15 +39,12 @@ type = internal/memory
 interval = 0.2
 format-prefix = "  "
 format-prefix-foreground = ${theme.cyan}
-format-padding = 2
 label = %percentage_used:2%%
 
 [module/filesystem]
 type = internal/fs
 mount-0 = /home
 label-mounted = %used%
-format-mounted-padding = 2
-format-mounted-background = ${theme.background-alt}
 format-mounted-prefix = "  "
 format-mounted-prefix-foreground = ${theme.cyan}
 
@@ -39,27 +53,22 @@ type = internal/date
 
 format-prefix = "  "
 format-prefix-foreground = ${theme.magenta}
-format-padding = 2
 
-date = %Y-%m-%d %H:%M:%S
+date = %m-%d %H:%M
 interval = 1
 
-[module/pulseaudio]
-type = internal/pulseaudio
+[module/audio]
+type = internal/alsa
 
 format-volume-font = 1
 format-volume-prefix = "墳  "
 format-volume-prefix-foreground = ${theme.blue}
 format-volume = <label-volume>
-format-volume-padding = 2
-format-volume-background = ${theme.background-alt}
 
 format-muted-font = 1
 format-muted-prefix = "ﱝ  "
-format-muted = MUTED
+format-muted = ---
 format-muted-foreground = ${theme.red}
-format-muted-padding = 2
-format-muted-background = ${theme.background-alt}
 
 label-volume = %percentage:2%%
 
@@ -69,18 +78,16 @@ type = internal/network
 interface = eth0
 interval = 0.5
 
-label-connected = %downspeed:4%
+label-connected = %downspeed:6:6%
+speed-unit = ""
+
 format-connected-prefix = "  "
 format-connected-prefix-foreground = ${theme.orange}
 format-connected = <label-connected>
-format-connected-padding = 2
-format-connected-background = ${theme.background-alt}
 
 label-disconnected = "DISCONNECTED"
 label-disconnected-foreground = ${theme.red}
 format-disconnected = <label-disconnected>
-format-disconnected-padding = 2
-format-disconnected-background = ${theme.background-alt}
 
 [module/weather]
 type = custom/script
@@ -88,7 +95,6 @@ type = custom/script
 exec = ~/.local/bin/getweatherinfo
 interval = 300
 format-prefix = "   "
-format-padding = 2
 format-prefix-foreground = ${theme.yellow}
 label = %output%
 
@@ -98,12 +104,13 @@ host = 127.0.0.1
 port = 6600
 
 format-online = <label-time> <label-song>
-format-online-padding = 2
 format-online-prefix = "   "
 format-online-prefix-foreground = ${theme.red}
 
 format-offline = ""
 
-label-song = %artist% - %title%
-label-song-font = 2
+label-song = %title%
+label-song-font = 1
+
+label-time = %elapsed%
 label-time-font = 2
