--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -3,7 +3,7 @@ type = internal/xworkspaces
 
 label-active = %name%
 label-active-background = ${theme.background-alt}
-label-active-underline= ${theme.primary}
+label-active-overline= ${theme.primary}
 label-active-padding = 1
 
 label-occupied = %name%
@@ -29,16 +29,16 @@ label-maxlen = 46
 
 [module/cpu]
 type = internal/cpu
-interval = 0.2
-format-prefix = "龍  "
-format-prefix-foreground = ${theme.green}
+interval = 0.5
+format-prefix = "龍"
+format-foreground = ${theme.foreground}
 label = %percentage:2%%
 
 [module/memory]
 type = internal/memory
 interval = 0.2
-format-prefix = "  "
-format-prefix-foreground = ${theme.cyan}
+format-prefix = " "
+format-foreground = ${theme.foreground}
 label = %percentage_used:2%%
 
 [module/filesystem]
@@ -46,23 +46,23 @@ type = internal/fs
 mount-0 = /home
 label-mounted = %used%
 format-mounted-prefix = "  "
-format-mounted-prefix-foreground = ${theme.cyan}
+format-mounted-prefix-foreground = ${theme.foreground}
 
 [module/datetime]
 type = internal/date
 
-format-prefix = "  "
-format-prefix-foreground = ${theme.magenta}
+format-prefix = " "
+format-foreground = ${theme.foreground}
 
-date = %m-%d %H:%M
+date = %Y-%m-%d %H:%M:%S
 interval = 1
 
 [module/audio]
 type = internal/alsa
 
 format-volume-font = 1
-format-volume-prefix = "墳  "
-format-volume-prefix-foreground = ${theme.blue}
+format-volume-prefix = "墳 "
+format-volume-foreground = ${theme.foreground}
 format-volume = <label-volume>
 
 format-muted-font = 1
@@ -82,7 +82,7 @@ label-connected = %downspeed:6:6%
 speed-unit = ""
 
 format-connected-prefix = "  "
-format-connected-prefix-foreground = ${theme.orange}
+format-connected-prefix-foreground = ${theme.foreground}
 format-connected = <label-connected>
 
 label-disconnected = "DISCONNECTED"
@@ -94,8 +94,8 @@ type = custom/script
 
 exec = ~/.local/bin/getweatherinfo
 interval = 300
-format-prefix = "   "
-format-prefix-foreground = ${theme.yellow}
+format-prefix = "  "
+format-foreground = ${theme.foreground}
 label = %output%
 
 [module/mpd]
@@ -104,13 +104,12 @@ host = 127.0.0.1
 port = 6600
 
 format-online = <label-time> <label-song>
-format-online-prefix = "   "
-format-online-prefix-foreground = ${theme.red}
+format-online-foreground = ${theme.foreground}
 
 format-offline = ""
 
-label-song = %title%
-label-song-font = 1
+label-song = %artist% - %title%
+label-song-font = 2
 
 label-time = %elapsed%
 label-time-font = 2
