--- a/.config/themes/one_dark.yaml
+++ b/.config/themes/one_dark.yaml
@@ -25,6 +25,6 @@ pink:    '#c678dd'
 primary0: '#579dd6'
 primary1: '#579dd6'
 
-secondary0: '#82a868'
-secondary1: '#82a868'
+secondary0: '#56b6c2'
+secondary1: '#56b6c2'
 
