--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -5,7 +5,6 @@ margin-bottom = 0
 include-file = modules.ini
 include-file = theme.ini
 
-
 [bar/mainbar]
 width = 100%
 height = 22pt
@@ -15,20 +14,20 @@ fixed-center = true
 background = ${theme.background}
 foreground = ${theme.foreground}
 
-line-size = 2pt
+line-size = 3pt
 
-border-size = 3pt
+border-size = 0pt
 border-color = #00000000
 
 padding = 2
 module-margin = 2
 
-font-0 = Iosevka Nerd Font:size=11;2
-font-1 = Iosevka Nerd Font:size=10;2
+font-0 = Iosevka Nerd Font:size=11:style=bold;3
+font-1 = Iosevka Nerd Font:size=10:style=bold;3
 
-modules-left = xworkspaces xwindow
-modules-center =
-modules-right = mpd networkspeed weather cpu memory audio datetime
+modules-left = datetime weather xwindow
+modules-center = xworkspaces 
+modules-right = mpd audio cpu memory
 
 tray-position = right
 tray-padding = 6
