Add battery module to polybar

--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -113,3 +113,14 @@ label-song-font = 2
 
 label-time = %elapsed%
 label-time-font = 2
+
+[module/battery]
+type = internal/battery
+
+battery = BAT0
+adapter = ADP0
+poll-interval = 5
+full-at = 99
+
+format-charging-prefix = " "
+format-discharging-prefix = " "
