--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -27,7 +27,7 @@ font-1 = Iosevka Nerd Font:size=10:style=bold;3
 
 modules-left = datetime weather xwindow
 modules-center = xworkspaces 
-modules-right = mpd audio cpu memory
+modules-right = mpd audio cpu memory battery
 
 tray-position = right
 tray-padding = 6
