--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -30,7 +30,7 @@ label-maxlen = 46
 [module/cpu]
 type = internal/cpu
 interval = 0.5
-format-prefix = "龍"
+format-prefix = "龍 "
 format-foreground = ${theme.foreground}
 label = %percentage:2%%
 
@@ -58,7 +58,7 @@ date = %Y-%m-%d %H:%M:%S
 interval = 1
 
 [module/audio]
-type = internal/alsa
+type = internal/pulseaudio
 
 format-volume-font = 1
 format-volume-prefix = "墳 "
