--- a/.config/config_template/polybar/theme.ini
+++ b/.config/config_template/polybar/theme.ini
@@ -1,4 +1,8 @@
 [theme]
+
+font0 = {{ font }}:size=11:style=bold;3
+font1 = {{ font }}:size=10:style=bold;3
+
 background = {{ bg0 }}
 background-alt = {{ bg1 }}
 
