--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -14,7 +14,7 @@ fixed-center = true
 background = ${theme.background}
 foreground = ${theme.foreground}
 
-line-size = 3pt
+line-size = 2.5pt
 
 border-size = 0pt
 border-color = #00000000
@@ -22,8 +22,8 @@ border-color = #00000000
 padding = 2
 module-margin = 2
 
-font-0 = Iosevka Nerd Font:size=11:style=bold;3
-font-1 = Iosevka Nerd Font:size=10:style=bold;3
+font-0 = ${theme.font0}
+font-1 = ${theme.font1}
 
 modules-left = datetime weather xwindow
 modules-center = xworkspaces 
