Improve rofi & picom layout

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -13,7 +13,7 @@ size-transition = true
 #################################
 #             Corners           #
 #################################
-corner-radius = 12.0;
+corner-radius = 6.0;
 rounded-corners-exclude = [
   "class_g = 'Polybar'",
 ];
@@ -25,7 +25,7 @@ round-borders-exclude = [
 #             Shadows           #
 #################################
 
-shadow = false;
+shadow = true;
 shadow-radius = 12;
 shadow-opacity = 0.75;
 shadow-offset-x = -12;
@@ -82,10 +82,10 @@ opacity-rule = [
 
 blur: {
 	method = "kawase";
-    strength = 5.0;
+    strength = 4.0;
 }
 
-blur-background = false;
+blur-background = true;
 blur-background-frame = true;
 blur-background-fixed = true;
 
@@ -135,7 +135,7 @@ wintypes: {
 	normal = {  };
 	dock = {  };
 	popup_menu = { focus = false; opacity = 0.90; };
-	dropdown_menu = { focus = false; };
+	dropdown_menu = { focus = false;  };
 	above = {  };
 	splash = {  };
 	utility = { focus = false; blur-background = false; };
