Add dunst template

--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -10,7 +10,7 @@ label-occupied = %name%
 label-occupied-background = ${theme.background-alt}
 label-occupied-padding = 1
 
-label-empty = %name%
+label-empty = ""
 label-empty-padding = 1
 
 label-urgent = %name%
