Improve bootstrap, default icon/cursor theme + improve polybar look

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -7,7 +7,7 @@ include-file = theme.ini
 
 [bar/mainbar]
 width = 100%
-height = 22pt
+height = 18pt
 
 fixed-center = true
 
@@ -16,18 +16,18 @@ foreground = ${theme.foreground}
 
 line-size = 2.5pt
 
-border-size = 0pt
-border-color = #00000000
+border-size = 6px
+border-color = ${theme.background}
 
 padding = 2
-module-margin = 2
+module-margin = 10px
 
 font-0 = ${theme.font0}
 font-1 = ${theme.font1}
 
-modules-left = datetime weather xwindow
-modules-center = xworkspaces 
-modules-right = mpd audio cpu memory battery
+modules-left = cpu memory filesystem network wifi battery xwindow
+modules-center = xworkspaces
+modules-right = mpd audio weather datetime
 
 tray-position = right
 tray-padding = 6
