--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -1,58 +1,82 @@
 [module/xworkspaces]
 type = internal/xworkspaces
 
-label-active = %name%
-label-active-background = ${theme.background-alt}
-label-active-overline= ${theme.primary}
-label-active-padding = 1
+icon-0 = 1;%{O2}1%{O2}
+icon-1 = 2;%{O2}2%{O2}
+icon-2 = 3;%{O2}3%{O2}
+icon-3 = 4;爵 %{O-3} 
+icon-4 = 5; %{O-1}
+icon-5 = 6;勒 %{O-4}
 
-label-occupied = %name%
+label-active = %icon%
+label-active-background = ${theme.primary}
+label-active-foreground = ${theme.background}
+# label-active-overline= ${theme.primary}
+label-active-padding = 1
+label-active-margin = 2px
+
+label-occupied = %icon%
 label-occupied-background = ${theme.background-alt}
 label-occupied-padding = 1
+label-occupied-margin = 2px
 
-label-empty = %name%
+label-empty = %icon%
 label-empty-padding = 1
+label-empty-margin = 2px
 
-label-urgent = %name%
+label-urgent = %icon%
 label-urgent-background = ${theme.primary}
 label-urgent-padding = 1
+label-urgent-margin = 2px
+
+enable-click = false
+enable-scroll = false
 
 [module/xwindow]
 type = internal/xwindow
 
 format = <label>
-format-padding = 3
 format-font = 2
+format-foreground = ${theme.foreground}
+format-background = ${theme.background-alt}
+format-padding = 1
 
 label = %title%
 label-maxlen = 42
 
 [module/cpu]
 type = internal/cpu
-interval = 0.5
+interval = 1
 format-prefix = "龍 "
 format-foreground = ${theme.foreground}
+format-background = ${theme.background-alt}
+format-padding = 1
 label = %percentage:2%%
 
 [module/memory]
 type = internal/memory
-interval = 0.2
+interval = 1
 format-prefix = " "
 format-foreground = ${theme.foreground}
+format-background = ${theme.background-alt}
+format-padding = 1
 label = %percentage_used:2%%
 
 [module/filesystem]
 type = internal/fs
 mount-0 = /home
 label-mounted = %used%
-format-mounted-prefix = "  "
-format-mounted-prefix-foreground = ${theme.foreground}
+format-mounted-prefix = "  "
+format-mounted-background = ${theme.background-alt}
+format-mounted-padding = 1
 
 [module/datetime]
 type = internal/date
 
 format-prefix = " "
 format-foreground = ${theme.foreground}
+format-background = ${theme.background-alt}
+format-padding = 1
 
 date = %Y-%m-%d %H:%M:%S
 interval = 1
@@ -60,42 +84,70 @@ interval = 1
 [module/audio]
 type = internal/pulseaudio
 
+
+format-volume = <label-volume>
 format-volume-font = 1
 format-volume-prefix = "墳 "
 format-volume-foreground = ${theme.foreground}
-format-volume = <label-volume>
+format-volume-background = ${theme.background-alt}
+format-volume-padding = 1
 
 format-muted-font = 1
 format-muted-prefix = "ﱝ  "
 format-muted = ---
 format-muted-foreground = ${theme.red}
+format-muted-background = ${theme.background-alt}
+format-muted-padding = 1
 
 label-volume = %percentage:2%%
 
-[module/networkspeed]
-type = internal/network
 
+[module/wifi]
+type = internal/network
+interface = wlan1
+interval = 1
+
+label-connected = %downspeed:6:6%
+speed-unit = ""
+
+format-connected-prefix = "直 "
+format-connected = <label-connected>
+format-connected-background = ${theme.background-alt}
+format-connected-padding = 1
+
+format-disconnected = <label-disconnected>
+label-disconnected = "睊 "
+label-disconnected-foreground = ${theme.red}
+format-disconnected-background = ${theme.background-alt}
+format-disconnected-padding = 1
+
+[module/network]
+type = internal/network
 interface = eth0
 interval = 0.5
 
 label-connected = %downspeed:6:6%
 speed-unit = ""
 
-format-connected-prefix = "  "
-format-connected-prefix-foreground = ${theme.foreground}
+format-connected-prefix = "  "
 format-connected = <label-connected>
+format-connected-background = ${theme.background-alt}
+format-connected-padding = 1
 
-label-disconnected = "DISCONNECTED"
-label-disconnected-foreground = ${theme.red}
 format-disconnected = <label-disconnected>
+label-disconnected = "  "
+label-disconnected-foreground = ${theme.red}
+format-disconnected-background = ${theme.background-alt}
+format-disconnected-padding = 1
 
 [module/weather]
 type = custom/script
 
 exec = ~/.local/bin/getweatherinfo
-interval = 300
+interval = 900
 format-prefix = "  "
-format-foreground = ${theme.foreground}
+format-background = ${theme.background-alt}
+format-padding = 1
 label = %output%
 
 [module/mpd]
@@ -105,11 +157,14 @@ port = 6600
 
 format-online = <label-time> <label-song>
 format-online-foreground = ${theme.foreground}
+format-online-background = ${theme.background-alt}
+format-online-padding = 1
 
 format-offline = ""
 
 label-song = %artist% - %title%
 label-song-font = 2
+label-song-maxlen = 30
 
 label-time = %elapsed%
 label-time-font = 2
@@ -119,8 +174,13 @@ type = internal/battery
 
 battery = BAT0
 adapter = ADP0
-poll-interval = 5
+poll-interval = 10
 full-at = 99
 
 format-charging-prefix = " "
+format-charging-background = ${theme.background-alt}
+format-charging-padding = 1
+
 format-discharging-prefix = " "
+format-discharging-background = ${theme.background-alt}
+format-discharging-padding = 1
