--- a/config/hypr/hypr.conf
+++ b/config/hypr/hypr.conf
@@ -36,7 +36,10 @@ Animations {
 
 # Window rules
 
+ windowrule=workspace scratchpad,class:keepassxc
+
  windowrule=workspace 3,class:obsidian
+ windowrule=fullscreen,class:obsidian
 
  windowrule=workspace 4,class:firefox
  windowrule=workspace 4,class:LibreWolf
@@ -67,7 +70,11 @@ bind=SUPERSHIFT,b,exec,rofi-insert-bookmark
 bind=SUPERCTRL,l,exec,slock
 bind=SUPERSHIFT,x,exec,loginctl kill-session $XDG_SESSION_ID
 
-bind=SUPERSHIFT,q,killactive,
+
+bind=SUPER,g,scratchpad,
+bind=SUPERSHIFT,g,movetoworkspace,scratchpad
+
+bind=SUPERSHIFT,q,killactive
 
 bind=SUPERSHIFT,h,movewindow,l
 bind=SUPERSHIFT,l,movewindow,r
@@ -86,6 +93,15 @@ bind=SUPER,b,exec,setbg
 
 bind=SUPER,s,exec,screenshot
 bind=SUPERSHIFT,s,exec,screenshot-select
+
+bind=SHIFT,F1,exec,pactl set-sink-mute @DEFAULT_SINK@ toggle
+bind=SHIFT,F2,exec,pactl set-sink-volume @DEFAULT_SINK@ -2%
+bind=SHIFT,F3,exec,pactl set-sink-volume @DEFAULT_SINK@ +2%
+
+bind=SHIFT,F5,exec,mpc clear
+bind=SHIFT,F6,exec,mpc prev
+bind=SHIFT,F7,exec,mpc toggle
+bind=SHIFT,F8,exec,mpc next
 
 # Resizing
 
