--- a/config/gtk-3.0/settings.ini
+++ b/config/gtk-3.0/settings.ini
@@ -1,4 +1,9 @@
 [Settings]
 gtk-theme-name=Materia-dark
 gtk-icon-theme-name=Papirus-Dark
-gtk-font-name={{font}} 11
+gtk-font-name="Fira Sans 11"
+
+gtk-xft-antialias=1
+gtk-xft-hinting=1
+gtk-xft-hintstyle=hintfull
+gtk-xft-rgba=none
