--- a/config/hypr/hypr.conf
+++ b/config/hypr/hypr.conf
@@ -55,7 +55,7 @@ Animations {
 bind=SUPER,RETURN,exec,alacritty
 bind=SUPERCTRL,w,exec,firefox
 bind=SUPERCTRL,f,exec,thunar
-bind=SUPERCTRL,c,exec,thunderbird-beta
+bind=SUPERCTRL,t,exec,thunderbird-beta
 bind=SUPERCTRL,d,exec,discord
 bind=SUPERCTRL,o,exec,obsidian
 bind=SUPERCTRL,n,exec,keepassxc
