--- a/config/polybar/config.ini
+++ b/config/polybar/config.ini
@@ -26,9 +26,9 @@ font-0 = ${theme.font0}
 font-1 = ${theme.font1}
 font-2 = ${theme.font2}
 
-modules-left = xworkspaces cpu memory network wifi
+modules-left = cpu memory network wifi
 modules-center = xwindow
-modules-right = mpd timer battery audio datetime
+modules-right = mpd battery audio datetime
 
 tray-position = right
 tray-padding = 6
